added more necessary parameters

--- a/autosubmit_conf/expdef.yml
+++ b/autosubmit_conf/expdef.yml
@@ -2,10 +2,20 @@ DEFAULT:
   # Default HPC platform name.
   HPCARCH: "LUMI"
 EXPERIMENT:
+  # List of start dates
+  DATELIST: '20000101'
+  # List of members.
+  MEMBERS: fc0
   # Unit of the chunk size. Can be hour, day, month, or year.
-  CHUNKSIZE: '4'
+  CHUNKSIZEUNIT: month
   # Number of chunks of the experiment.
   NUMCHUNKS: '2'
+  CHUNKINI: ''
+  CHUNKSIZE: '4'
+  # Calendar used for the experiment. Can be standard or noleap.
+  CALENDAR: standard
+  # Size of each chunk.
+  TS_NUMBER: '80'
   # Experiment resources (up to a total of 128)
   NEMO_CORES: 48
   XIOS_CORES: 2
