--- a/autosubmit_conf/jobs.yml
+++ b/autosubmit_conf/jobs.yml
@@ -33,7 +33,7 @@ JOBS:
 
   NEMO_RUN:
     FILE: autosubmit/nemo.sh
-    DEPENDENCIES: NEMO_INPUTS NEMO_IMG_PULL
+    DEPENDENCIES: NEMO_INPUTS NEMO_IMG_PULL SINGULARITY_MOD_DEPLOY
     PROCESSORS: 256
     EXCLUSIVE: true
     PLATFORM: LUMI
