Reduced worflow for Marenostrum 5 cluster

--- a/autosubmit_conf/expdef.yml
+++ b/autosubmit_conf/expdef.yml
@@ -1,6 +1,6 @@
 DEFAULT:
   # Default HPC platform name.
-  HPCARCH: "LUMI"
+  HPCARCH: "MN5"
 EXPERIMENT:
   # List of start dates
   DATELIST: '20000101'
