--- a/autosubmit_conf/platform.yml
+++ b/autosubmit_conf/platform.yml
@@ -1,15 +1,15 @@
 PLATFORMS:
-  LUMI:
+  MN5:
     TYPE: SLURM
-    HOST: lumi.csc.fi
+    HOST: glogin1.bsc.es
     PROJECT: AUTOSUBMIT_HPC_PROJECT_NUMBER
     PARTITION: AUTOSUBMIT_HPC_PARTITION
     USER: AUTOSUBMIT_HPC_USER
     SCRATCH_DIR: AUTOSUBMIT_HPC_SCRATCH_DIR
     MAX_WALLCLOCK: 48:00
-  LUMI_LOGIN:
+  MN5_LOGIN:
     TYPE: PS
-    HOST: lumi.csc.fi
+    HOST: glogin1.bsc.es
     PROJECT: AUTOSUBMIT_HPC_PROJECT_NUMBER
     USER: AUTOSUBMIT_HPC_USER
     SCRATCH_DIR: AUTOSUBMIT_HPC_SCRATCH_DIR
