--- a/autosubmit_conf/jobs.yml
+++ b/autosubmit_conf/jobs.yml
@@ -6,37 +6,7 @@ JOBS:
 
   REMOTE_SETUP:
     FILE: script/remote_setup.sh
-    PLATFORM: LUMI_LOGIN
+    PLATFORM: MN5_LOGIN
     DEPENDENCIES: LOCAL_SETUP
     WALLCLOCK: 00:05
-    RUNNING: once
-
-  NEMO_IMG_PULL:
-    FILE: script/img_pull.sh
-    DEPENDENCIES: REMOTE_SETUP
-    PLATFORM: LUMI_LOGIN
-    WALLCLOCK: 00:25
-    RUNNING: once
-
-  NEMO_INPUTS:
-    FILE: script/prepare_input.sh
-    DEPENDENCIES: REMOTE_SETUP
-    PLATFORM: LUMI_LOGIN
-    WALLCLOCK: 00:25
-    RUNNING: once
-  
-  SINGULARITY_MOD_DEPLOY:
-    FILE: script/easybuild_singularity.sh
-    DEPENDENCIES: REMOTE_SETUP
-    PLATFORM: LUMI_LOGIN
-    WALLCLOCK: 00:25
-    RUNNING: once
-
-  NEMO_RUN:
-    FILE: script/nemo.sh
-    DEPENDENCIES: NEMO_INPUTS NEMO_IMG_PULL SINGULARITY_MOD_DEPLOY
-    PROCESSORS: 256
-    EXCLUSIVE: true
-    PLATFORM: LUMI
-    WALLCLOCK: 00:25
     RUNNING: once
